cabal-version: 2.4
name: webits
version: 0.1.1
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE
copyright: © 2021 Paul Johnson
author: Paul Johnson
maintainer: paul@cogito.org.uk
synopsis: Web interface to UI gadgets.
category: Graphics
data-files:
   JS/favicon.ico
   JS/arrowDialog.js
   JS/AppendGrid.js
   JS/AppendGrid-dev.js
   JS/lib/*.js
   JQuery/external/jquery/jquery.js
   JQuery/images/*.png
   JQuery/*.css
   JQuery/*.min.css
   JQuery/*.js
   JQuery/*.min.js

library
   hs-source-dirs: src
   exposed-modules:
      Control.Concurrent.TState
      Data.ForestModel
      Network.Webits
      Network.Webits.ArrowDialog
      Network.Webits.Icons
      Network.Webits.Menu
      Network.Webits.Table
      Network.Webits.StyleSheets
      Paths_webits
   default-language: Haskell2010
   default-extensions: Arrows DeriveFunctor ExistentialQuantification
                       ExtendedDefaultRules FlexibleContexts FlexibleInstances
                       FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
                       MultiParamTypeClasses MultiWayIf OverloadedStrings Rank2Types
                       RankNTypes RecursiveDo ScopedTypeVariables TemplateHaskell
                       TupleSections TypeFamilies ViewPatterns
   ghc-options: -Wall -j
   build-depends:
      aeson,
      base >=4.14 && < 4.15,
      base64-bytestring,
      banana-ui-base,
      blank-canvas,
      blaze-html,
      blaze-markup,
      bytestring,
      clay,
      colour,
      containers,
      directory,
      filepath,
      http-types,
      image-type,
      javascript-bridge,
      lens,
      lens-aeson,
      modern-uri,
      mtl,
      scotty,
      stm,
      text,
      transformers,
      unordered-containers,
      uuid,
      vector,
      wai,
      warp,
      hspec,
      QuickCheck

executable demo-webit
   main-is: Main.hs
   hs-source-dirs: demo-webit
   other-modules: Dialog Matrix Menu Types Paths_webits
   default-language: Haskell2010
   default-extensions: Arrows DeriveFunctor ExistentialQuantification
                       ExtendedDefaultRules FlexibleContexts FlexibleInstances
                       FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
                       MultiParamTypeClasses MultiWayIf OverloadedStrings Rank2Types
                       RankNTypes RecursiveDo ScopedTypeVariables TemplateHaskell
                       TupleSections TypeFamilies ViewPatterns
   -- Vanilla compile.
   ghc-options: -Wall -j -threaded
   data-dir: demo-webit
   data-files:
      Testcard_F.jpg
      words.txt

   -- Threadscope.
   -- ghc-options: -Wall -j -threaded -eventlog -rtsopts

   -- Profiling.
   -- ghc-options: -Wall -j -threaded -prof -fprof-auto
   build-depends:
      aeson,
      base >=4.14 && < 4.15,
      banana-ui-base,
      blaze-html,
      clay,
      colour,
      containers,
      http-types,
      javascript-bridge,
      lens,
      modern-uri,
      mtl,
      random,
      QuickCheck,
      scotty,
      stm,
      text >= 1.2,
      time,
      webits


test-suite tests
   type: exitcode-stdio-1.0
   main-is: TestMain.hs
   hs-source-dirs: test
   default-language: Haskell2010
   default-extensions: Arrows DeriveFunctor ExistentialQuantification
                       ExtendedDefaultRules FlexibleContexts FlexibleInstances
                       FunctionalDependencies GADTs GeneralizedNewtypeDeriving LambdaCase
                       MultiParamTypeClasses MultiWayIf OverloadedStrings Rank2Types
                       RankNTypes RecursiveDo ScopedTypeVariables TemplateHaskell
                       TupleSections TypeFamilies ViewPatterns
   build-depends:
      base >=4.14 && < 4.15,
      Cabal >= 1.9.2,
      containers,
      hspec,
      lens,
      QuickCheck,
      webits
